--- a/main.html
+++ b/main.html
@@ -6,6 +6,5 @@
     <title>gooi</title>
 </head>
 <body>
-<h1>hello</h1> <h2>hi</h2>   <h3>bye</h3> <h4>apple</h4> <h5>orange</h5> <h6>lemon</h6>
-</body>
+김규희
 </html>
