--- a/main.html
+++ b/main.html
@@ -6,5 +6,30 @@
     <title>gooi</title>
 </head>
 <body>
-김규희
+<span>hihihihi</span>
+<span>hello</span>
+<span>chicken</span>
+<div>oliveyoung</div>
+<div>etudehouse</div>
+<div>innisfree</div>
+<button>확인</button>
+<button>취소</button>
+<input type="text"
+name="이름"
+placeholder="이름을 입력해주세요!"/>
+<input type="password" name="비빌번호"/>
+<input type="date" name="생년월일"/>
+<a href="/sub.html">서브페이지로 이동하기</a>
+<img src="lion.png"
+style="width: 200px"
+alt="사자"/>
+<!--이것은 주석티비-->
+<h1>HTML 주석에 대해 배워봅시다</h1>
+<!--주석
+주석
+주서서서석
+주석
+주석-->
+<p>이 문단은 화면에 표시됩니다. 주석은 표시되지않습니다.</p>
+</body>
 </html>
